# ChangeLog for sci-biology/maker
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  30 Dec 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: added dependency on dev-perl/forks

  18 Dec 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: drop duplicated Module-Build requirement

  18 Dec 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: fix Module-Build dependency

  01 Dec 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: add DEPENDency on dev-perl/Module-Build

  20 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: document opened Gentoo bugzilla tickets

  20 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: depend on mpich2 when USE=mpi, add back hard DEPENDency on
  repeatmasker because install process does not continue without it, document
  additional perl modules not available in portage

  20 Nov 2015; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> maker-2.31.8.ebuild:
  sci-biology/maker: respect USE=mpi, remove hard DEPENDency on repeatmasker-
  libraries which are fetch restricted

  16 Sep 2014; Christoph Junghans <ottxor@gentoo.org> MAKER-9999.ebuild:
  added license

*MAKER-9999 (23 Mar 2014)

  23 Mar 2014; Martin Mokrejs <mmokrejs@fold.natur.cuni.cz> +MAKER-9999.ebuild,
  +metadata.xml:
  a skeleton for a new package